# lms-tutorial-pldi

c-intrinsics/: .gitignore  CMakeLists.txt
c-intrinsics/include/: asm.h  cpuid.h  perf.h  util.h
c-intrinsics/lib/: CMakeLists.txt  cpuid.c  perf.c  util.c
c-intrinsics/src/example0/: CMakeLists.txt  example0.c  example0.h  example0_simd.c  example0_sisd.c
c-intrinsics/src/example1/: CMakeLists.txt  ComplexArray.cpp  ComplexArray.h  ComplexElement.cpp  ComplexElement.h  example1.cpp  example1.h  pointwise.cpp
scala-lms-intrinsics/: .gitignore  build.sbt
scala-lms-intrinsics/src/main/scala/ch/ethz/acl/commons/cir/: AVX2_IR.scala  CIR.scala
scala-lms-intrinsics/src/main/scala/ch/ethz/acl/commons/cir/codegen/: CApplication.scala  CCodegen.scala  CStructure.scala  CUnparser.scala
scala-lms-intrinsics/src/main/scala/ch/ethz/acl/commons/cir/extensions/: ArrayOpsExpOptExtra.scala  BooleanEqual.scala  CGenIfThenElseOpt.scala  CLikeGenVariablesRename.scala  CNumericExpOpt.scala  Cast.scala  Comment.scala  ForLoop.scala  HeapArray.scala  NumericMathOps.scala  SwitchExp.scala  UnsignedBaseExp.scala  WhileMirror.scala
scala-lms-intrinsics/src/main/scala/ch/ethz/acl/commons/isa/: ISA.scala
scala-lms-intrinsics/src/main/scala/ch/ethz/acl/commons/util/: DSLUtils.scala  Debugging.scala  NumericExtensions.scala  TheTyp.scala  Utilities.scala
scala-lms-intrinsics/src/main/scala/tutorial/example0/: Example0.scala
scala-lms-intrinsics/src/main/scala/tutorial/example1/: Example1.scala
scala-lms-intrinsics/src/main/scala/tutorial/example2/: Example2.scala  SVectors.scala
